--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,6 @@
 body
 { 
-    color: deepskyblue;
+    color: rgb(255, 0, 98);
     text-align: center;
     font-family: "Arial";
     font-syze: 16px;
