--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 body
 { 
-    color: rgb(255, 0, 98);
+    background: #1e1f24;
+    color: #333;
     text-align: center;
     font-family: "Arial";
     font-syze: 16px;
@@ -18,6 +19,12 @@ body
     padding: 0.5em;
 }
 
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
@@ -28,7 +35,7 @@ body
 #container
 { 
     width: 70%;
-    padding: 1cm;
+    padding: 1cm0;
     text-align: left;
     border: 1px solid #ddd;
     margin: 0 auto;
@@ -41,5 +48,6 @@ body
 
 #post
 {
+    background: white;
     padding: 1em;
 }
